멤버, 관리자메뉴 완료